--- a/code_base/src/main/front-end-build/package.json
+++ b/code_base/src/main/front-end-build/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Front-End-Build-Tool",
-  "description": "Utility for building related task for bifurcation project.",
+  "description": "BLANK_AS_OF_NOW",
   "version": "0.1.1",
   "engines": {
     "node": "0.10.x",
